aws-migration/le-migration/09-keycloak/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    app: keycloak
    project: linkedeye
    environment: prod
